Overhaul to remove nest, switch to simple functions for vercel
